--- a/jenkins/test-output/old/Default suite/methods-alphabetical.html
+++ b/jenkins/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="697f96">  <td>12/04/27 09:01:56</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.bromine.test.LoginTest@fc9944]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@15582114</td>   <td></td> </tr>
-<tr bgcolor="697f96">  <td>12/04/27 09:02:04</td>   <td>7703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testUntitled()[pri:0, instance:com.bromine.test.LoginTest@fc9944]">testUntitled</td> 
-  <td>main@15582114</td>   <td></td> </tr>
+<tr bgcolor="8080cc">  <td>12/04/27 16:44:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testUntitled()[pri:0, instance:com.bromine.test.LoginTest@2db19d]">testUntitled</td> 
+  <td>main@5618579</td>   <td></td> </tr>
 </table>
